Closed
Bug 947025
Opened 12 years ago
Closed 12 years ago
limit time spent in font loader RunLoader calls
Categories
(Core :: Graphics: Text, defect)
Core
Graphics: Text
Tracking
()
RESOLVED
FIXED
mozilla28
People
(Reporter: jtd, Assigned: jtd)
References
(Blocks 1 open bug)
Details
(Whiteboard: [qa-])
Attachments
(1 file)
|
1.84 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
The chrome hang data on bug 859558 shows a significant number of hangs within RunLoader calls. For some reason I thought we already had an explicit time limit to prevent this but apparently not.
The gfxPlatformFontList::RunLoader method is called on a timer and loads the data for a pref-specified number of font families. The pref can be tweaked but I think we should explicitly limit each pass to prevent hangs.
| Assignee | ||
Comment 1•12 years ago
|
||
Limit the time spent within one pass of RunLoader to 500ms.
Attachment #8343444 -
Flags: review?(roc)
| Assignee | ||
Updated•12 years ago
|
Assignee: nobody → jdaggett
Comment on attachment 8343444 [details] [diff] [review]
patch, add time limit to RunLoader
Review of attachment 8343444 [details] [diff] [review]:
-----------------------------------------------------------------
::: gfx/thebes/gfxPlatformFontList.cpp
@@ +689,5 @@
> mStartIndex = 0;
> mNumFamilies = mFontFamiliesToLoad.Length();
> }
>
> +#define FONT_LOADER_MAX_TIMESLICE 500 // max time for one pass through RunLoader = 500ms
How about lowering this to 100ms?
Attachment #8343444 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 3•12 years ago
|
||
(In reply to Robert O'Callahan (:roc) (Mozilla Corporation) from comment #2)
> > +#define FONT_LOADER_MAX_TIMESLICE 500 // max time for one pass through RunLoader = 500ms
>
> How about lowering this to 100ms?
Sure.
| Assignee | ||
Comment 4•12 years ago
|
||
Pushed to inbound:
https://hg.mozilla.org/integration/mozilla-inbound/rev/dba508605c1b
Comment 5•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Comment 6•11 years ago
|
||
Please re-add "verifyme" if you want QA to test the fix for this bug (details on how to reproduce it and the used tools would also be necessary in this case).
Keywords: verifyme
Whiteboard: [qa-]
You need to log in
before you can comment on or make changes to this bug.
Description
•