Bug 947025 - Limit the time spent in RunLoader to avoid chrome hang. r=roc